refactor(routes): updated routes and openapi config file for the same
